event bubbling example

--- a/event-bubbling/index.html
+++ b/event-bubbling/index.html
@@ -15,6 +15,16 @@
     <div class="wrapper">
         <input type="button" value="Click me" />
     </div>
+<!-- below list items click events are captured in container -->
+    <div id="container-bubble" class="container">
+      <ul>
+        <li>Bubble up 1</li>
+        <li>Bubble up 2</li>
+      </ul>
+    </div>
+    <div class="wrapper">
+        <input type="button" value="Click me" />
+    </div>
 
     <script src="app.js"></script>
   </body>
